--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -30,6 +30,8 @@ ul, li {
 
     transition: color 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
     cursor: pointer;
+
+    white-space: nowrap;
 }
 
 .category-item:hover {
